# BS-Thing

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml  setup.sh
DB/: Dockerfile
RAG-Server/: Dockerfile
RAG-Server/include/: client_handler.h  config.h  request_parser.h  response.h  server.h  server_socket.h
RAG-Server/src/: CMakeLists.txt  Makefile  api.c  client_handler.c  request_parser.c  response.c  server.c  server_socket.c
